--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ numpy==1.21.4
 tensorflow==2.0.0
 pandas==1.3.5
 matplotlib==3.1.1
-scikit-learn==0.23.2
-seaborn==0.9.0
+Pillow==8.3.2
+googledrivedownloader==0.4
